调制健康页面调整

--- a/icon_font/iconfont.css
+++ b/icon_font/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1491470358142'); /* IE9*/
-  src: url('iconfont.eot?t=1491470358142#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1491470358142') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1491470358142') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1491470358142#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1491978953831'); /* IE9*/
+  src: url('iconfont.eot?t=1491978953831#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1491978953831') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1491978953831') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1491978953831#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -60,6 +60,8 @@
 .icon-shouye:before { content: "\e604"; }
 
 .icon-baogao:before { content: "\e638"; }
+
+.icon-tishi:before { content: "\e61c"; }
 
 .icon-icon-yxj-record:before { content: "\e639"; }
 
