体质健康报告页  调整

--- a/icon_font/iconfont.css
+++ b/icon_font/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1491978953831'); /* IE9*/
-  src: url('iconfont.eot?t=1491978953831#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1491978953831') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1491978953831') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1491978953831#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1492076185864'); /* IE9*/
+  src: url('iconfont.eot?t=1492076185864#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1492076185864') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1492076185864') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1492076185864#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -29,9 +29,13 @@
 
 .icon-rongyu:before { content: "\e60a"; }
 
+.icon-dayumaoqiu:before { content: "\e676"; }
+
 .icon-weixin:before { content: "\e63b"; }
 
 .icon-zuozhao:before { content: "\e621"; }
+
+.icon-quanzi:before { content: "\e602"; }
 
 .icon-danxuan:before { content: "\e668"; }
 
@@ -51,11 +55,31 @@
 
 .icon-tizhong:before { content: "\e7da"; }
 
+.icon-yangwoqizuo:before { content: "\e624"; }
+
+.icon-sport3:before { content: "\e617"; }
+
 .icon-paobu:before { content: "\e655"; }
+
+.icon-yundonglanqiu:before { content: "\e65f"; }
+
+.icon-yundongpingpangqiu:before { content: "\e661"; }
+
+.icon-yundongwangqiu:before { content: "\e663"; }
+
+.icon-yundongyouyong:before { content: "\e669"; }
+
+.icon-yundongzuqiu1:before { content: "\e66a"; }
+
+.icon-tizhi:before { content: "\e6a1"; }
 
 .icon-rilixuanze:before { content: "\e6b1"; }
 
 .icon-qudingbu:before { content: "\e63d"; }
+
+.icon-tiyujiankang:before { content: "\e672"; }
+
+.icon-rongyuzhengshu:before { content: "\e69e"; }
 
 .icon-shouye:before { content: "\e604"; }
 
@@ -66,6 +90,8 @@
 .icon-icon-yxj-record:before { content: "\e639"; }
 
 .icon-danxuan1:before { content: "\e6ab"; }
+
+.icon-yundong66:before { content: "\e74e"; }
 
 .icon-iconfontchengji:before { content: "\e7b3"; }
 
@@ -101,15 +127,25 @@
 
 .icon-wron404:before { content: "\e667"; }
 
+.icon-a:before { content: "\e615"; }
+
 .icon-shengao:before { content: "\e7db"; }
+
+.icon-yundong:before { content: "\e6c0"; }
 
 .icon-shouqijiantou:before { content: "\e632"; }
 
 .icon-fgn:before { content: "\e60c"; }
+
+.icon-tubiaozhizuomoban:before { content: "\e636"; }
 
 .icon-zanwujilu:before { content: "\e633"; }
 
 .icon-tongji1:before { content: "\e612"; }
 
 .icon-bmi:before { content: "\e68d"; }
+
+.icon-danjiaotiao:before { content: "\e613"; }
+
+.icon-tiaoyuan:before { content: "\e616"; }
 
