--- a/css/qky_grow.css
+++ b/css/qky_grow.css
@@ -92,11 +92,17 @@
 /*报告书*/
 .rep_users.placeholder{ height:auto; line-height:inherit; margin:5px 0;}
 @media screen and ( max-width: 320px ) {.rep_users .pics{ width:44px; height:44px;}.weui-header .weui-header-title, .weui-header h1{ font-size:17px;}
-.report_pers .user-pic{ width:78px; height:78px;}/*个人信息*/}
+.report_pers .user-pic{ width:78px; height:78px;}/*个人信息*/
+.weui-table02 td:first-child span{ width:130px;}
+}
 @media ( min-device-width:321px ) and ( max-width:380px ){.rep_users .pics{ width:54px; height:54px;}
-.report_pers .user-pic{ width:86px; height:86px;}/*个人信息*/}
+.report_pers .user-pic{ width:86px; height:86px;}/*个人信息*/
+.weui-table02 td:first-child span{ width:150px;}
+}
 @media ( min-device-width:381px ) and ( max-width:414px ){.rep_users .pics{ width:64px; height:64px;}
-.report_pers .user-pic{ width:92px; height:92px;}/*个人信息*/}
+.report_pers .user-pic{ width:92px; height:92px;}/*个人信息*/
+.weui-table02 td:first-child span{ width:170px;}
+}
 @media ( min-device-width:415px ){.rep_users .pics{ width:80px; height:80px;}
 .report_pers .user-pic{ width:100px; height:100px;}/*个人信息*/}
 .zmbox.grade-l{ left:3px; height:80%;}
@@ -143,5 +149,6 @@
 /*体质健康*/
 .weui_media_box .weui_media_title { margin-bottom:8px;}
 .echart01{ width:100%; height:auto; min-height:280px;}
-.weui-table02 th,.weui-table02 td{ padding:15px 0; font-size:14px;}
-.weui-table02 td:first-child{ max-width:50%;white-space:nowrap; overflow:hidden;}
+.weui-table02 th,.weui-table02 td{ padding:15px 0; font-size:14px; position:relative;}
+.weui-table02 td span{ display:inline-block;}
+.weui-table02 td:first-child span{ max-width:96%;white-space:nowrap; overflow:hidden; text-overflow:ellipsis;}
