--- a/css/weui2.css
+++ b/css/weui2.css
@@ -2770,7 +2770,7 @@ button.weui-form-preview-btn {
     height: 20px;
     line-height: 20px;
     position: absolute;
-    right: 10px;
+    right: 0;
     text-align: center;
     width: 40px;
 
@@ -2806,19 +2806,19 @@ display:block;
 .weui-mark-vip{
     left: 0;
     position: absolute;
-    top:0;overflow: hidden;height: 50px;width: 90px;
+    top:0;overflow: hidden;height: 50px;width: 92px;
 }
 .weui-mark-lt{
     color: #fff;
     display: block;
     font-size: 12px!important;
-    left:-15px;height: 14px;
+    left:-18px;height: 14px;
     line-height: 14px!important;
     position: relative;
     text-align: center;
     top:15px;
     transform: rotate(-45deg);
-    width:70px;
+    width:76px;
     
 }
 .weui-mark-meta{position: relative;}
@@ -2884,4 +2884,8 @@ font-weight:700;
  .mar_tb12{ margin-top:12px !important; margin-bottom:12px !important;}
 .mar_t12{ margin-top:12px !important;}
 .mar_b12{margin-bottom:12px !important;}
+.mar_tb20{ margin-top:20px !important; margin-bottom:20px !important;}
+.mar_t20{ margin-top:20px !important;}
+.mar_b20{margin-bottom:20px !important;}
+
  
