学生评价：当该班级下未创建日常评价体系的冷启动页面

--- a/css/weui2.css
+++ b/css/weui2.css
@@ -2857,6 +2857,9 @@ font-weight:700;
 .pad_b15{padding-bottom:15px !important;}
 .pad_t44{ padding-top:44px !important;}
 .pad_t60{ padding-top:60px !important;}
+.pad_b20{ padding-bottom:20px !important;}
+.pad_b30{ padding-bottom:30px !important;}
+.pad_b40{ padding-bottom:40px !important;}
 .pad_b60{ padding-bottom:60px !important;}
 /**外边*距*/
 .mar_0{ margin:0 !important;}
