--- a/css/qky_grow.css
+++ b/css/qky_grow.css
@@ -97,15 +97,18 @@ input, textarea, keygen, select, button{font-family:-apple-system-font,"Helvetic
 .report_pers .user-pic{ width:78px; height:78px;}/*个人信息*/
 .weui-table02 td:first-child span{ width:130px;}
 .honor-tit{max-width:120px}
+.weui-table td, .weui-table th { max-width:130px;}
 }
 @media ( min-device-width:321px ) and ( max-width:380px ){.rep_users .pics{ width:54px; height:54px;}
 .report_pers .user-pic{ width:86px; height:86px;}/*个人信息*/
 .weui-table02 td:first-child span{ width:150px;}
 .honor-tit{max-width:176px}
+.weui-table td, .weui-table th { max-width:150px;}
 }
 @media ( min-device-width:381px ) and ( max-width:414px ){.rep_users .pics{ width:64px; height:64px;}
 .report_pers .user-pic{ width:92px; height:92px;}/*个人信息*/
 .weui-table02 td:first-child span{ width:170px;}
+.weui-table td, .weui-table th { max-width:170px;}
 .honor-tit{max-width:222px}
 }
 @media ( min-device-width:415px ){.rep_users .pics{ width:80px; height:80px;}
@@ -145,6 +148,7 @@ input, textarea, keygen, select, button{font-family:-apple-system-font,"Helvetic
 .ribbon .ribbon-content:before {left: 0;border-width: 0.6rem 0 0 0.6rem;}
 .ribbon .ribbon-content:after {right: 0;border-width: 0.6rem 0.6rem 0 0;}
 /*表格内容0*/
+.weui-table td, .weui-table th {white-space: nowrap;overflow: hidden;text-overflow: ellipsis;}
 .rep-d_form .weui-table{ background-color:transparent;}
 .rep-d_form-bor{ border-radius:12% 16% 12% 13%; width:98%;}
 .rep-d_form{ border-radius: 15% 17% 10% 10%;}
@@ -222,7 +226,7 @@ input, textarea, keygen, select, button{font-family:-apple-system-font,"Helvetic
 .zwt_tzlist{ color:#636363;font-size:14px; border-bottom:1px dashed #d8d8d8; padding:5px;}
 .zwt_tzicon{ color:#68a0f4 ; width:30px;}
 .zwt_tzicon i{ font-size:22px;}
-.zwt_tztit{ font-weight:bold; color:#333; font-size:14px;}
+.zwt_tztit{ font-weight:bold; color:#333; font-size:14px; width:64%;white-space: nowrap; overflow: hidden;text-overflow: ellipsis;}
 .zwt_tzlist.yuan{ border:2px solid #68a0f4; width:60px; height:60px; text-align:center; border-radius:50%; margin:0 auto;}
 .zwt_tzlist.yuan .zwt_tzicon{ margin:0 auto; width:100%; height:100%; line-height:50px;}
 .zwt_tzlist.yuan .zwt_tzcont{ margin-top:-25px; color:#68a0f4; font-weight:bold;}
