--- a/icon_font/iconfont.css
+++ b/icon_font/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1492495958560'); /* IE9*/
-  src: url('iconfont.eot?t=1492495958560#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1492495958560') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1492495958560') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1492495958560#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1500261713379'); /* IE9*/
+  src: url('iconfont.eot?t=1500261713379#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1500261713379') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1500261713379') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1500261713379#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -36,6 +36,8 @@
 .icon-dayumaoqiu:before { content: "\e676"; }
 
 .icon-weixin:before { content: "\e63b"; }
+
+.icon-cross:before { content: "\e63a"; }
 
 .icon-zuozhao:before { content: "\e621"; }
 
@@ -94,6 +96,8 @@
 .icon-shouye:before { content: "\e604"; }
 
 .icon-shangchuan1:before { content: "\e64f"; }
+
+.icon-chahao:before { content: "\e61e"; }
 
 .icon-baogao:before { content: "\e638"; }
 
@@ -174,4 +178,6 @@
 .icon-danjiaotiao:before { content: "\e613"; }
 
 .icon-tiaoyuan:before { content: "\e616"; }
+
+.icon-zonghepingjia:before { content: "\e60e"; }
 
