--- a/css/weui2.css
+++ b/css/weui2.css
@@ -31,7 +31,7 @@ a:active {
   vertical-align: top; }
 .yc{ display:none;}
 .block {
-  display: block; }
+  display: block !important; }
 
 .show {
   display: block; }
@@ -43,7 +43,7 @@ a:active {
   display: inline; }
 
 .iblock {
-  display: inline-block;
+  display: inline-block !important;
   *display: inline;
   *zoom: 1; }
 
