--- a/icon_font/iconfont.css
+++ b/icon_font/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1500261713379'); /* IE9*/
-  src: url('iconfont.eot?t=1500261713379#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1500261713379') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1500261713379') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1500261713379#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1501145697298'); /* IE9*/
+  src: url('iconfont.eot?t=1501145697298#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1501145697298') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1501145697298') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1501145697298#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -165,11 +165,11 @@
 
 .icon-tubiaozhizuomoban:before { content: "\e636"; }
 
-.icon-rongyubang:before { content: "\e637"; }
-
 .icon-zanwujilu:before { content: "\e633"; }
 
 .icon-tongji1:before { content: "\e612"; }
+
+.icon-xiaoxi:before { content: "\e67e"; }
 
 .icon-bmi:before { content: "\e68d"; }
 
@@ -178,6 +178,8 @@
 .icon-danjiaotiao:before { content: "\e613"; }
 
 .icon-tiaoyuan:before { content: "\e616"; }
+
+.icon-xiaoxi1:before { content: "\e685"; }
 
 .icon-zonghepingjia:before { content: "\e60e"; }
 
