--- a/css/weui2.css
+++ b/css/weui2.css
@@ -2839,6 +2839,7 @@ font-weight:700;
 .pad_l5{ padding-left:5px !important;}
 .pad_r5{padding-right:5px !important;}
 .pad_tb5{ padding-top:5px !important; padding-bottom:5px !important;}
+.pad_t0{ padding-top:0px !important;}
 .pad_t5{ padding-top:5px !important;}
 .pad_b5{padding-bottom:5px !important;}
 .pad_10{ padding:10px !important}
@@ -2869,6 +2870,7 @@ font-weight:700;
 .mar_r5{margin-right:5px !important;}
 .mar_tb5{ margin-top:5px !important; margin-bottom:5px !important;}
 .mar_t5{ margin-top:5px !important;}
+.mar_b0{margin-bottom:0 !important;}
 .mar_b5{margin-bottom:5px !important;}
 .mar_10{ margin:10px !important;}
 .mar_lr10{ margin-left:10px !important; margin-right:10px !important;}
@@ -2884,7 +2886,7 @@ font-weight:700;
 .mar_tb15{ margin-top:15px !important; margin-bottom:15px !important;}
 .mar_t15{ margin-top:15px !important;}
 .mar_b15{margin-bottom:15px !important;}
- .mar_tb12{ margin-top:12px !important; margin-bottom:12px !important;}
+.mar_tb12{ margin-top:12px !important; margin-bottom:12px !important;}
 .mar_t12{ margin-top:12px !important;}
 .mar_b12{margin-bottom:12px !important;}
 .mar_tb20{ margin-top:20px !important; margin-bottom:20px !important;}
